--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grace-recognition",
 	"description": "A composition api for SpeechSynthesis",
-	"version": "1.0.0",
+	"version": "1.0.0-beta.1",
 	"packageManager": "pnpm@7.30.3",
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.mjs",
