--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
 	"name": "grace-recognition",
-	"description": "A composition api for SpeechSynthesis",
+	"description": "A composition api for SpeechRecognition",
 	"version": "1.0.0-beta.1",
-	"packageManager": "pnpm@7.30.3",
-	"main": "./dist/index.cjs",
-	"module": "./dist/index.mjs",
-	"browser": {
-		"dist/index.js": "dist/index.min.js",
-		"dist/es5/index.js": "dist/es5/index.min.js"
-	},
-	"unpkg": "./dist/index.min.js",
-	"types": "./dist/index.d.ts",
+	"packageManager": "pnpm@8.6.1",
+	"main": "dist/index.cjs.js",
+	"module": "dist/index.esm-bundler.js",
+	"browser": "dist/index.esm-browser.js",
+	"unpkg": "dist/index.global.js",
+	"jsdelivr": "dist/index.global.js",
+	"types": "dist/index.d.ts",
 	"exports": {
 		".": {
 			"types": "./dist/index.d.ts",
-			"require": "./dist/index.cjs",
+			"module": "./dist/index.esm-bundler.js",
+			"require": "./dist/index.cjs.js",
 			"import": "./dist/index.mjs"
 		},
 		"./*": "./*"
 	},
 	"directories": {
-		"lib": "lib",
 		"dist": "dist",
 		"src": "src"
 	},
 	"files": [
-		"lib",
 		"dist",
 		"typings"
 	],
 	"scripts": {
-		"build": "run-s clean build:{bundle,es5,types,docs} roll-types",
+		"build": "run-s clean build:{bundle,types} roll-types",
 		"build:bundle": "rollup -c build/rollup.config.ts --configPlugin @rollup/plugin-typescript",
-		"build:es5": "cross-env BABEL_ENV=es5 pnpm build:bundle",
-		"build:types": "tsc -p src/tsconfig.declaration.json",
+		"build:types": "tsc -p src/tsconfig.json",
 		"build:docs": "rm-all docs && typedoc && prettier --write \"**/*.md\"",
-		"roll-types": "api-extractor run && rm-all temp && cp dist/index.d.ts dist/es5",
+		"deploy": "sh scripts/deploy.sh",
+		"roll-types": "api-extractor run && rm-all temp",
 		"watch": "pnpm build:bundle -w",
 		"pub": "tscjs scripts/publish",
 		"unpub": "tscjs scripts/unpublish",
@@ -50,27 +47,27 @@
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
 	"dependencies": {
-		"js-cool": "^3.1.0"
+		"js-cool": "^4.6.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.21.8",
-		"@babel/preset-env": "^7.21.5",
+		"@babel/core": "^7.22.1",
+		"@babel/preset-env": "^7.22.4",
 		"@babel/preset-typescript": "^7.21.5",
-		"@eslint-sets/eslint-config-ts": "^5.2.0",
-		"@microsoft/api-extractor": "^7.34.9",
+		"@eslint-sets/eslint-config-ts": "^5.3.0",
+		"@microsoft/api-extractor": "^7.35.1",
 		"@rollup/plugin-alias": "^5.0.0",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^24.1.0",
-		"@rollup/plugin-node-resolve": "^15.0.2",
-		"@rollup/plugin-terser": "^0.4.1",
-		"@rollup/plugin-typescript": "^11.1.0",
-		"@types/jest": "^29.5.1",
-		"@types/node": "^20.1.3",
+		"@rollup/plugin-commonjs": "^25.0.0",
+		"@rollup/plugin-node-resolve": "^15.1.0",
+		"@rollup/plugin-terser": "^0.4.3",
+		"@rollup/plugin-typescript": "^11.1.1",
+		"@types/jest": "^29.5.2",
+		"@types/node": "^20.2.5",
 		"chalk": "^5.2.0",
 		"core-js": "^3.30.2",
 		"coveralls": "^3.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.40.0",
+		"eslint": "^8.42.0",
 		"fast-glob": "^3.2.12",
 		"jest": "^29.5.0",
 		"load-yml": "^1.3.0",
@@ -79,19 +76,20 @@
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
 		"rm-all": "^1.0.0",
-		"rollup": "^3.21.6",
+		"rollup": "^3.23.1",
 		"rollup-plugin-cleanup": "^3.2.1",
 		"rollup-plugin-filesize": "^10.0.0",
+		"rollup-plugin-inject-code": "^1.1.0",
 		"rollup-plugin-visualizer": "^5.9.0",
 		"ts-jest": "^29.1.0",
 		"tsnd": "^1.1.0",
-		"typedoc": "^0.24.7",
+		"typedoc": "^0.24.8",
 		"typedoc-plugin-markdown": "^3.15.3",
-		"typescript": "^5.0.4",
+		"typescript": "^5.1.3",
 		"zx": "^7.2.2"
 	},
 	"peerDependencies": {
-		"core-js": ">= 3"
+		"js-cool": ">= 2"
 	},
 	"engines": {
 		"node": ">=12.20"
@@ -103,6 +101,7 @@
 				"webpack"
 			],
 			"allowedVersions": {
+				"rollup": ">=3.22.0",
 				"eslint": "^8.0.0"
 			}
 		}
