--- a/package.json
+++ b/package.json
@@ -50,21 +50,22 @@
 		"js-cool": "^4.6.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.1",
-		"@babel/preset-env": "^7.22.4",
-		"@babel/preset-typescript": "^7.21.5",
+		"@babel/core": "^7.22.5",
+		"@babel/preset-env": "^7.22.5",
+		"@babel/preset-typescript": "^7.22.5",
 		"@eslint-sets/eslint-config-ts": "^5.3.0",
-		"@microsoft/api-extractor": "^7.35.1",
+		"@microsoft/api-extractor": "^7.35.2",
 		"@rollup/plugin-alias": "^5.0.0",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^25.0.0",
+		"@rollup/plugin-commonjs": "^25.0.1",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-terser": "^0.4.3",
 		"@rollup/plugin-typescript": "^11.1.1",
+		"@types/dom-speech-recognition": "^0.0.1",
 		"@types/jest": "^29.5.2",
-		"@types/node": "^20.2.5",
+		"@types/node": "^20.3.0",
 		"chalk": "^5.2.0",
-		"core-js": "^3.30.2",
+		"core-js": "^3.31.0",
 		"coveralls": "^3.1.1",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.42.0",
@@ -76,11 +77,11 @@
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
 		"rm-all": "^1.0.0",
-		"rollup": "^3.23.1",
+		"rollup": "^3.25.0",
 		"rollup-plugin-cleanup": "^3.2.1",
 		"rollup-plugin-filesize": "^10.0.0",
 		"rollup-plugin-inject-code": "^1.1.0",
-		"rollup-plugin-visualizer": "^5.9.0",
+		"rollup-plugin-visualizer": "^5.9.2",
 		"ts-jest": "^29.1.0",
 		"tsnd": "^1.1.0",
 		"typedoc": "^0.24.8",
@@ -89,6 +90,7 @@
 		"zx": "^7.2.2"
 	},
 	"peerDependencies": {
+		"@types/dom-speech-recognition": "*",
 		"js-cool": ">= 2"
 	},
 	"engines": {
