--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grace-recognition",
 	"description": "A composition api for SpeechRecognition",
-	"version": "1.0.0-beta.2",
+	"version": "1.0.0",
 	"packageManager": "pnpm@8.6.1",
 	"main": "dist/index.cjs.js",
 	"module": "dist/index.esm-bundler.js",
@@ -47,28 +47,28 @@
 		"prettier": "prettier --write \"**/*.{js,ts,jsx,tsx,yml,json,md}\""
 	},
 	"dependencies": {
-		"js-cool": "^4.6.0"
+		"js-cool": "^4.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.5",
 		"@babel/preset-env": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
-		"@eslint-sets/eslint-config-ts": "^5.3.0",
-		"@microsoft/api-extractor": "^7.35.2",
+		"@eslint-sets/eslint-config-ts": "^5.4.0",
+		"@microsoft/api-extractor": "^7.36.0",
 		"@rollup/plugin-alias": "^5.0.0",
 		"@rollup/plugin-babel": "^6.0.3",
-		"@rollup/plugin-commonjs": "^25.0.1",
+		"@rollup/plugin-commonjs": "^25.0.2",
 		"@rollup/plugin-node-resolve": "^15.1.0",
 		"@rollup/plugin-terser": "^0.4.3",
 		"@rollup/plugin-typescript": "^11.1.1",
 		"@types/dom-speech-recognition": "^0.0.1",
 		"@types/jest": "^29.5.2",
-		"@types/node": "^20.3.0",
+		"@types/node": "^20.3.1",
 		"chalk": "^5.2.0",
 		"core-js": "^3.31.0",
 		"coveralls": "^3.1.1",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.42.0",
+		"eslint": "^8.43.0",
 		"fast-glob": "^3.2.12",
 		"jest": "^29.5.0",
 		"load-yml": "^1.3.0",
@@ -77,7 +77,7 @@
 		"prettier-config-common": "^1.4.0",
 		"reinstaller": "^3.0.0",
 		"rm-all": "^1.0.0",
-		"rollup": "^3.25.0",
+		"rollup": "^3.25.1",
 		"rollup-plugin-cleanup": "^3.2.1",
 		"rollup-plugin-filesize": "^10.0.0",
 		"rollup-plugin-inject-code": "^1.1.0",
